# whaplot

./: README.md  pyproject.toml
src/whaplot/: __init__.py  application.py  argument_parser.py
src/whaplot/config/: application_config.py  race_config.py
src/whaplot/io/: chat_exporter.py  chat_reader.py
src/whaplot/plotter/: plotter.py
src/whaplot/viewmodels/: chat.py  message.py
tests/: test_argument_parser.py  test_chat_reader.py
tests/resources/: chat_with_attachments.txt  chat_with_creation_messages.txt
