[project]
name = "whaplot"
version = "0.1.0"
description = "A tool for generating cool plots and data visualizations from WhatsApp chats."
readme = "README.md"
authors = [{ name = "Alejandro Fernández" }]
requires-python = ">=3.13"
dependencies = ["pandas>=2.3.0", "sjvisualizer>=0.0.14"]

[project.scripts]
whaplot = "whaplot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pyright>=1.1.402", "pytest>=8.4.1", "ruff>=0.12.0"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.pyright]
pythonPath = ".venv/bin/python"
typeCheckingMode = "standard"
diagnosticsMode = "workspace"
include = ["src", "tests"]
exclude = ["**/__pycache__"]

[tool.ruff]
line-length = 120
format.docstring-code-format = true

[tool.ruff.lint]
pydocstyle.convention = "google"
select = ["ALL"]
ignore = [
    "E111",
    "E114",
    "E117",
    "W191",
    "D1",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "TD",
    "FIX",
    "EM101",
    "EM102",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311", "PLR2004"]
